left with formatting the Blog content

--- a/tony-poem/src/index.css
+++ b/tony-poem/src/index.css
@@ -3,7 +3,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: "EB+Garamond", Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Garamond", Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
